form-link-update

--- a/loanmanagement/loan_app/templates/dashboard.html
+++ b/loanmanagement/loan_app/templates/dashboard.html
@@ -172,9 +172,9 @@ include '../config/call.php';
 
                       <ul class="nav nav-list">
 						<li>
-							<a href="#" class="dropdown-toggle">
+							<a href="form.html" class="dropdown-toggle">
 								<i class="icon-comment"></i>
-								<span class="menu-text"> View Message</span>
+								<span class="menu-text"> Form</span>
 								
 							</a>
 						</li>
