--- a/loanmanagement/loan_app/templates/dashboard.html
+++ b/loanmanagement/loan_app/templates/dashboard.html
@@ -15,9 +15,10 @@ include '../config/call.php';
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<!-- basic styles -->
+		<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"/>
+		
+		<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}"/>
 
-		<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-		<link rel="stylesheet" href="assets/css/font-awesome.min.css" />
 
 		<!--[if IE 7]>
 		  <link rel="stylesheet" href="assets/css/font-awesome-ie7.min.css" />
@@ -27,13 +28,12 @@ include '../config/call.php';
 
 		<!-- fonts -->
 
-		<link rel="stylesheet" href="assets/css/ace-fonts.css" />
+		<link rel="stylesheet" href="{% static 'css/ace-fonts.css' %}"/>
 
 		<!-- ace styles -->
-
-		<link rel="stylesheet" href="assets/css/ace.min.css" />
-		<link rel="stylesheet" href="assets/css/ace-rtl.min.css" />
-		<link rel="stylesheet" href="assets/css/ace-skins.min.css" />
+		<link rel="stylesheet" href="{% static 'css/ace.min.css' %}"/>
+		<link rel="stylesheet" href="{% static 'css/ace-rtl.min.css' %}"/>
+		<link rel="stylesheet" href="{% static 'css/ace-skins.min.css' %}"/>
 
 		<!--[if lte IE 8]>
 		  <link rel="stylesheet" href="assets/css/ace-ie.min.css" />
@@ -42,6 +42,7 @@ include '../config/call.php';
 		<!-- inline styles related to this page -->
 
 		<!-- ace settings handler -->
+
 
 		<script src="assets/js/ace-extra.min.js"></script>
 
@@ -64,6 +65,7 @@ include '../config/call.php';
 	</head>
 
 	<body>
+		{% load satic %}
 		<div class="navbar navbar-default" id="navbar">
 			<script type="text/javascript">
 				try{ace.settings.check('navbar' , 'fixed')}catch(e){}
