--- a/loanmanagement/loan_app/templates/dashboard.html
+++ b/loanmanagement/loan_app/templates/dashboard.html
@@ -174,7 +174,7 @@ include '../config/call.php';
 
                       <ul class="nav nav-list">
 						<li>
-							<a href="form.html" class="dropdown-toggle">
+							<a href="/formtest" class="dropdown-toggle">
 								<i class="icon-comment"></i>
 								<span class="menu-text"> Form</span>
 
