--- a/View/index.html
+++ b/View/index.html
@@ -11,9 +11,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<!-- basic styles -->
-		<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"/>
+		<link rel="stylesheet" href="/Css/bootstrap.min.css"/>
 
-		<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}"/>
+		<link rel="stylesheet" href="Css/font-awesome.min.css"/>
 
 
 		<!--[if IE 7]>
