--- a/View/index.html
+++ b/View/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<!-- Mirrored from 198.74.61.72/themes/preview/ace/ by HTTrack Website Copier/3.x [XR&CO'2013], Fri, 28 Feb 2014 17:44:06 GMT -->
 <head>
-	{% load static %}
 		<meta charset="utf-8" />
 		<title>Dashboard-SODEC NEPAL</title>
 
@@ -11,43 +8,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<!-- basic styles -->
-		<link rel="stylesheet" href="/Css/bootstrap.min.css"/>
+		<link rel="stylesheet" href="Css/bootstrap.min.css"/>
 
 		<link rel="stylesheet" href="Css/font-awesome.min.css"/>
 
-
-		<!--[if IE 7]>
-		  <link rel="stylesheet" href="assets/css/font-awesome-ie7.min.css" />
-		<![endif]-->
-
-		<!-- page specific plugin styles -->
-
-		<!-- fonts -->
-
-		<link rel="stylesheet" href="{% static 'css/ace-fonts.css' %}"/>
+		<link rel="stylesheet" href="Css/ace-fonts.css"/>
 
 		<!-- ace styles -->
-		<link rel="stylesheet" href="{% static 'css/ace.min.css' %}"/>
-		<link rel="stylesheet" href="{% static 'css/ace-rtl.min.css' %}"/>
-		<link rel="stylesheet" href="{% static 'css/ace-skins.min.css' %}"/>
-
-		<!--[if lte IE 8]>
-		  <link rel="stylesheet" href="assets/css/ace-ie.min.css" />
-		<![endif]-->
-
-		<!-- inline styles related to this page -->
-
-		<!-- ace settings handler -->
+		<link rel="stylesheet" href="Css/ace.min.css"/>
+		<link rel="stylesheet" href="Css/ace-rtl.min.css"/>
+		<link rel="stylesheet" href="Css/ace-skins.min.css"/>
 
 
-		<script src="{% static 'js/ace-extra.min.js' %}"></script>
-
-		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-
-		<!--[if lt IE 9]>
-		<script src="assets/js/html5shiv.js"></script>
-		<script src="assets/js/respond.min.js"></script>
-		<![endif]-->
+		<script src="js/ace-extra.min.js"></script>
 		<style type="text/css">
 			#navbar{
 				background:#f75279;
@@ -260,7 +233,7 @@
 		<!--[if !IE]> -->
 
 		<script type="text/javascript">
-			window.jQuery || document.write("<script src='{% static 'js/jquery-2.0.3.min.js' %}'>"+"<"+"/script>");
+			window.jQuery || document.write("<script src='{js/jquery-2.0.3.min.js'>"+"<"+"/script>");
 		</script>
 
 		<!-- <![endif]-->
@@ -272,10 +245,10 @@
 <![endif]-->
 
 		<script type="text/javascript">
-			if("ontouchend" in document) document.write("<script src='{% static 'js/jquery.mobile.custom.min.js' %}'>"+"<"+"/script>");
+			if("ontouchend" in document) document.write("<script src='{js/jquery.mobile.custom.min.js'>"+"<"+"/script>");
 		</script>
-		<script src="{% static 'js/bootstrap.min.js' %}"></script>
-		<script src="{% static 'js/typeahead-bs2.min.js' %}"></script>
+		<script src="{js/bootstrap.min.js"></script>
+		<script src="{js/typeahead-bs2.min.js"></script>
 
 		<!-- page specific plugin scripts -->
 
@@ -283,19 +256,19 @@
 		  <script src="assets/js/excanvas.min.js"></script>
 		<![endif]-->
 
-		<script src="{% static 'js/jquery-ui-1.10.3.custom.min.js' %}"></script>
-		<script src="{% static 'js/jquery.ui.touch-punch.min.js' %}"></script>
-		<script src="{% static 'js/jquery.slimscroll.min.js' %}"></script>
-		<script src="{% static 'js/jquery.easy-pie-chart.min.js' %}"></script>
-		<script src="{% static 'js/jquery.sparkline.min.js' %}"></script>
-		<script src="{% static 'js/flot/jquery.flot.min.js' %}"></script>
-		<script src="{% static 'js/flot/jquery.flot.pie.min.js' %}"></script>
-		<script src="{% static 'js/flot/jquery.flot.resize.min.js' %}"></script>
+		<script src="js/jquery-ui-1.10.3.custom.min.js"></script>
+		<script src="js/jquery.ui.touch-punch.min.js"></script>
+		<script src="js/jquery.slimscroll.min.js"></script>
+		<script src="js/jquery.easy-pie-chart.min.js"></script>
+		<script src="js/jquery.sparkline.min.js"></script>
+		<script src="js/flot/jquery.flot.min.js"></script>
+		<script src="js/flot/jquery.flot.pie.min.js"></script>
+		<script src="js/flot/jquery.flot.resize.min.js"></script>
 
 		<!-- ace scripts -->
 
-		<script src="{% static 'js/ace-elements.min.js' %}"></script>
-		<script src="{% static 'js/ace.min.js' %}"></script>
+		<script src="js/ace-elements.min.js"></script>
+		<script src="js/ace.min.js"></script>
 
 		<!-- inline scripts related to this page -->
 
