added fontawsome webfonts

--- a/View/index.html
+++ b/View/index.html
@@ -247,8 +247,8 @@
 		<script type="text/javascript">
 			if("ontouchend" in document) document.write("<script src='{js/jquery.mobile.custom.min.js'>"+"<"+"/script>");
 		</script>
-		<script src="{js/bootstrap.min.js"></script>
-		<script src="{js/typeahead-bs2.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/typeahead-bs2.min.js"></script>
 
 		<!-- page specific plugin scripts -->
 
@@ -469,5 +469,5 @@
 		</script>
 	</body>
 
-<!-- Mirrored from 198.74.61.72/themes/preview/ace/ by HTTrack Website Copier/3.x [XR&CO'2013], Fri, 28 Feb 2014 17:45:06 GMT -->
+
 </html>
