--- a/loanmanagement/loan_app/templates/dashboard (copy).html
+++ b/loanmanagement/loan_app/templates/dashboard (copy).html
@@ -3,7 +3,6 @@
 
 <!-- Mirrored from 198.74.61.72/themes/preview/ace/ by HTTrack Website Copier/3.x [XR&CO'2013], Fri, 28 Feb 2014 17:44:06 GMT -->
 <head>
-	{% load static %}
 		<meta charset="utf-8" />
 		<title>Dashboard-SODEC NEPAL</title>
 
@@ -11,10 +10,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<!-- basic styles -->
-		<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"/>
 
-		<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}"/>
-
+		<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+		<link rel="stylesheet" href="assets/css/font-awesome.min.css" />
 
 		<!--[if IE 7]>
 		  <link rel="stylesheet" href="assets/css/font-awesome-ie7.min.css" />
@@ -24,12 +22,13 @@
 
 		<!-- fonts -->
 
-		<link rel="stylesheet" href="{% static 'css/ace-fonts.css' %}"/>
+		<link rel="stylesheet" href="assets/css/ace-fonts.css" />
 
 		<!-- ace styles -->
-		<link rel="stylesheet" href="{% static 'css/ace.min.css' %}"/>
-		<link rel="stylesheet" href="{% static 'css/ace-rtl.min.css' %}"/>
-		<link rel="stylesheet" href="{% static 'css/ace-skins.min.css' %}"/>
+
+		<link rel="stylesheet" href="assets/css/ace.min.css" />
+		<link rel="stylesheet" href="assets/css/ace-rtl.min.css" />
+		<link rel="stylesheet" href="assets/css/ace-skins.min.css" />
 
 		<!--[if lte IE 8]>
 		  <link rel="stylesheet" href="assets/css/ace-ie.min.css" />
@@ -39,8 +38,7 @@
 
 		<!-- ace settings handler -->
 
-
-		<script src="{% static 'js/ace-extra.min.js' %}"></script>
+		<script src="assets/js/ace-extra.min.js"></script>
 
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 
@@ -52,7 +50,6 @@
 			#navbar{
 				background:#f75279;
 			}
-
 		#dropdown-menu{
 			background:#db093b;
 		}
@@ -169,7 +166,7 @@
 
                       <ul class="nav nav-list">
 						<li>
-							<a href="/formtest" class="dropdown-toggle">
+							<a href="form.html" class="dropdown-toggle">
 								<i class="icon-comment"></i>
 								<span class="menu-text"> Form</span>
 
@@ -184,7 +181,6 @@
 
 					<script type="text/javascript">
 						try{ace.settings.check('sidebar' , 'collapsed')}catch(e){}
-
 					</script>
 
 				</div>
@@ -260,7 +256,7 @@
 		<!--[if !IE]> -->
 
 		<script type="text/javascript">
-			window.jQuery || document.write("<script src='{% static 'js/jquery-2.0.3.min.js' %}'>"+"<"+"/script>");
+			window.jQuery || document.write("<script src='assets/js/jquery-2.0.3.min.js'>"+"<"+"/script>");
 		</script>
 
 		<!-- <![endif]-->
@@ -272,10 +268,10 @@
 <![endif]-->
 
 		<script type="text/javascript">
-			if("ontouchend" in document) document.write("<script src='{% static 'js/jquery.mobile.custom.min.js' %}'>"+"<"+"/script>");
+			if("ontouchend" in document) document.write("<script src='assets/js/jquery.mobile.custom.min.js'>"+"<"+"/script>");
 		</script>
-		<script src="{% static 'js/bootstrap.min.js' %}"></script>
-		<script src="{% static 'js/typeahead-bs2.min.js' %}"></script>
+		<script src="assets/js/bootstrap.min.js"></script>
+		<script src="assets/js/typeahead-bs2.min.js"></script>
 
 		<!-- page specific plugin scripts -->
 
@@ -283,19 +279,19 @@
 		  <script src="assets/js/excanvas.min.js"></script>
 		<![endif]-->
 
-		<script src="{% static 'js/jquery-ui-1.10.3.custom.min.js' %}"></script>
-		<script src="{% static 'js/jquery.ui.touch-punch.min.js' %}"></script>
-		<script src="{% static 'js/jquery.slimscroll.min.js' %}"></script>
-		<script src="{% static 'js/jquery.easy-pie-chart.min.js' %}"></script>
-		<script src="{% static 'js/jquery.sparkline.min.js' %}"></script>
-		<script src="{% static 'js/flot/jquery.flot.min.js' %}"></script>
-		<script src="{% static 'js/flot/jquery.flot.pie.min.js' %}"></script>
-		<script src="{% static 'js/flot/jquery.flot.resize.min.js' %}"></script>
+		<script src="assets/js/jquery-ui-1.10.3.custom.min.js"></script>
+		<script src="assets/js/jquery.ui.touch-punch.min.js"></script>
+		<script src="assets/js/jquery.slimscroll.min.js"></script>
+		<script src="assets/js/jquery.easy-pie-chart.min.js"></script>
+		<script src="assets/js/jquery.sparkline.min.js"></script>
+		<script src="assets/js/flot/jquery.flot.min.js"></script>
+		<script src="assets/js/flot/jquery.flot.pie.min.js"></script>
+		<script src="assets/js/flot/jquery.flot.resize.min.js"></script>
 
 		<!-- ace scripts -->
 
-		<script src="{% static 'js/ace-elements.min.js' %}"></script>
-		<script src="{% static 'js/ace.min.js' %}"></script>
+		<script src="assets/js/ace-elements.min.js"></script>
+		<script src="assets/js/ace.min.js"></script>
 
 		<!-- inline scripts related to this page -->
 
