--- a/View/index.html
+++ b/View/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 		<meta charset="utf-8" />
-		<title>Dashboard-SODEC NEPAL</title>
+		<title>नेपाल आयल निगम कर्जा व्यवस्थापन प्रणाली </title>
 
 		<meta name="description" content="overview &amp; stats" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -44,7 +44,7 @@
 					<a href="dashboard.php" class="navbar-brand">
 						<small>
 							<i class="icon-leaf"></i>
-							Sodec Nepal
+							नेपाल आयल निगम
 						</small>
 					</a><!-- /.brand -->
 				</div><!-- /.navbar-header -->
@@ -120,7 +120,7 @@
 						<li>
 							<a  class="dropdown-toggle">
 								<i class="icon-user"></i>
-								<span class="menu-text"> Loan Verification</span>
+								<span class="menu-text"> कर्जा प्रमाणीकरण</span>
 							</a>
 						</li>
 
@@ -128,7 +128,7 @@
 						<li>
 							<a  class="dropdown-toggle">
 								<i class="icon-user"></i>
-								<span class="menu-text"> Loan Management</span>
+								<span class="menu-text"> कर्जा व्यवस्थापन</span>
 							</a>
 						</li>
 
@@ -136,7 +136,7 @@
 						<li>
 							<a  class="dropdown-toggle">
 								<i class="icon-user"></i>
-								<span class="menu-text"> Loan Payment schedule</span>
+								<span class="menu-text"> कर्जा भुक्तानी</span>
 							</a>
 						</li>
 
@@ -144,7 +144,7 @@
 						<li>
 							<a href="/formtest" class="dropdown-toggle">
 								<i class="icon-comment"></i>
-								<span class="menu-text"> Form</span>
+								<span class="menu-text"> कर्जा आवेदन</span>
 
 							</a>
 						</li>
@@ -183,9 +183,9 @@
 
 									<i class="icon-ok green"></i>
 
-									Welcome to
+								नेपाल आयल निगम कर्जा व्यवस्थापन प्रणालीमा
 									<strong class="green">
-									SODEC Nepal
+									स्वागत छ।
 									</strong>
 									 <?php $greeting=date('A');
 									 	   if($greeting=="PM")
