--- a/View/index.html
+++ b/View/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="Css/font-awesome.min.css"/>
 
 		<link rel="stylesheet" href="Css/ace-fonts.css"/>
-
+		<link rel="stylesheet" href="Css/master.css">
 		<!-- ace styles -->
 		<link rel="stylesheet" href="Css/ace.min.css"/>
 		<link rel="stylesheet" href="Css/ace-rtl.min.css"/>
@@ -132,7 +132,7 @@
 
                       <ul class="nav nav-list">
 						<li>
-							<a class="dropdown-toggle" onclick="loanApply()">
+							<a class="dropdown-toggle" id="loanApply">
 								<i class="icon-comment"></i>
 								<span class="menu-text"> कर्जा आवेदन</span>
 
@@ -242,8 +242,54 @@
 
 
 		<!-- inline scripts related to this page -->
-		<script src="js/app.js"></script>
 
+<!-- All hidden blocks start here -->
+<div class='anusuchi-form' id='loanApplyForm'>
+	<form class='' action='index.html' method='post'>
+
+		<h1 class='t-center'>अनुसुचि १ बमोजिमको दसताखात फारम</h1>
+		<p> कार्यकारी निर्देशक ज्यु</p>
+		<p>नेपाल आयल निगम लि.</p>
+		<p> केन्दि्य कार्यालय </p>
+		<p> बबरमल काठमाडौं </p>
+		<h2 class='t-center'>बिसय:- सापटी स्व्कृतिको निबेदन पेस गरेको </h2>
+		<p>निगमको कर्मचारी सापटी सम्बन्धि निदेशिका, २०५३ अन्सारको सापटी सुविधा स्वीकृत हन देहाय अनुसारको ववरण समेत उल्लेख गरियो निवदन पेसगरेको छु । साथै सापटीको लागि उक्त निर्देसिकाले ब्यबस्था गरेको सबै शर्तहरु पालना गर्न मेरो मन्जुरी छ ।</p>
+		<span>पुरा नाम:<input type='text' name='name'></span>
+		<span>पारिचय न.<input type='text' name='identify-no'></span>
+		<span>हालको ठेगाना<input type='text' name='r-address'></span>
+		<span>स्थायी ठेगान<input type='text' name='p-address'></span><br>
+		<span>जन्म मिति<input type='date' name='birth-date'></span>
+		<h4>स्थायी नियुक्ति </h4>
+		<span>पद<input type='text' name='position'></span>
+		<span>तह<input type='text' name='label'></span>
+		<span>कार्यालय<input type='text' name='o-office'></span>
+		<h4>हाल कार्यरत</h4>
+		<span>पद<input type='text' name='position'></span>
+		<span>तह<input type='text' name='label'></span>
+		<span>कार्यालय<input type='text' name='n-office'></span>
+		<h4>बिचमा स्थायी सेवा टुटेको नटुटेको</h4>
+		<span><input type='radio' name='service' >टुटेको</span>  <input type='text' name='service-l' placeholder='टुटेको अवधि'></span><br>
+		<span><input type='radio' name='service' >नटुटेको</span><br>
+		<h4>अंतर कार्यालय सरुवा भई आएको भए अवधि सहितको विवरण <br>
+			<input type='file' name='transfer'>
+		</h4><br>
+		<h4>गएल वा असाधारण ( वेतलवी ) विदामा बसेको भए अवधि सहितको विवरण <br>
+		<input type='file' name='holiday'>
+		</h4> <br>
+		<span>नागरिकता प्रमाणपत्र नं.  <input type='text' name='nagtita-no' class='short'></span>
+		<span>जारी जिल्ला <input type='text' name='district' class='short'></span>
+		<span>जारी मिति <input type='date' name='issue-date'></span>
+		<span>कुन प्रयोजनको लागि सापटी माग गरेको <select name='loan-type'>
+			<option value='social loan'>समाजिक सपटि</option>
+	</select>
+		 </span>
+		 <span>सापटी उपभोग गाने स्थान : <input type='text' name='location'> </span>
+</form>
+<button type='button' name='submit'>Submit</button>
+</div>
+
+
+<script src="js/app.js"></script>
 	</body>
 
 
