added loan applictaion form

--- a/View/index.html
+++ b/View/index.html
@@ -37,7 +37,7 @@
 
 			<div class="navbar-container" id="navbar-container">
 				<div class="navbar-header pull-left">
-					<a href="dashboard.php" class="navbar-brand">
+					<a href="#" class="navbar-brand">
 						<small>
 							<i class="icon-leaf"></i>
 							नेपाल आयल निगम
@@ -101,7 +101,7 @@
 
 					<ul class="nav nav-list">
 						<li class="active">
-							<a href="dashboard.php">
+							<a href="#">
 								<i class="icon-dashboard"></i>
 								<span class="menu-text"> Dashboard </span>
 							</a>
