update javascript to get and push loandata

--- a/View/index.html
+++ b/View/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
 		<meta charset="utf-8" />
 		<title>नेपाल आयल निगम कर्जा व्यवस्थापन प्रणाली </title>
 
@@ -180,12 +181,31 @@
 									<h6 style="color:blue"> </h6>
 								</div>
 							</div>
-<div class="app" id="app">
+
+
+<div id="clear">
+	<div class="app" id="app">
 
 </div>
 <div id="loan_data"></div>
-
-
+<div id="form">
+	<form action="post">
+	name: <input type="text" name="name" id="employee_name"><br>
+	ID: <input type="number" name="name" id="employee_id"><br>
+	loan name: <input type="text" name="name" id="loanname"><br>
+	 date:<input type="date" name="name" id="recruitdate"><br>
+	position: <input type="text" name="name" id="position"><br>
+	amount: <input type="number" name="name" id="loanamount"><br>
+	 p-address: <input type="text" name="name" id="permanent_address"><br>
+	t-address: <input type="text" name="name" id="temporary_address"><br>
+	DOB:<input type="date" name="name" id="DOB"><br>
+	
+	</form>
+	<input type="submit" id="submit2" value="submit">
+	
+</div>
+	
+</div>
 
 		</div><!-- /.main-container -->
 
@@ -286,7 +306,8 @@
 		 </span>
 		 <span>सापटी उपभोग गाने स्थान : <input type='text' name='location'> </span>
 </form>
-<button type='button' name='submit' id="submit">Submit</button>
+<!-- <button type='button' name='submit' id="submit">Submit</button> -->
+<input type="Submit" name="submit" value="submit" id="submit">
 </div>
 
 
