--- a/view/src/Scss/sidebar.scss
+++ b/view/src/Scss/sidebar.scss
@@ -1,1 +1,14 @@
-
+.sidebar{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  height: 100vw;
+  border-right: 1px solid #d0d0d0;
+  .nav-link{
+    border: none;
+  }
+  .dropdown-menu{
+    position: static !important;
+  }
+}
