--- a/view/src/Scss/header.scss
+++ b/view/src/Scss/header.scss
@@ -6,7 +6,7 @@ html,body{
   margin: 0px;
 }
 .top-nav{
-  border-bottom: 1px solid #d0d0d0;
+  border-bottom: 2px solid #a0a0a0;
 }
 .navbar-brand{
   display: inline-block;
